--- a/index.html
+++ b/index.html
@@ -190,7 +190,14 @@
               </p>
             </div>
           </div>
-          <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCDCIssoudun%2F%3Fref%3Dbr_rs&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+          <div class="second-facebook-section">
+            <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCDCIssoudun%2F%3Fref%3Dbr_rs&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+            <div  data-aos="fade-up" class="facebook-left-section">
+              <p  data-aos="fade-up" class="orangeP">Likez,<br>commentez,<br>partagez !</p>
+              <span></span>
+              <img src="images/BlackArrow.png" alt="BlackArrow">
+            </div>
+          </div>
           <div class="button2 hvr-grow">
             <a href="pages/contacts.html">NOUS CONTACTER</a>
           </div>
