--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -1,66 +1,84 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Centre de Congrès Champs-Élysées</title>
-    <meta name="description" content="Centre de congrès de la mairie d'Issoudun"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="icon" href="../icons/logoC.png" />
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/template.css">
-    <link rel="stylesheet" href="../styles/slider.css">
-    <link rel="stylesheet" href="../styles/nav.css">
-    <link rel="stylesheet" href="../styles/footer.css">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a class="logo" href="../index.html">Congrès Issoudun</a>
-        <ul class="nav-links">
-          <li class="make-disappear">
-              <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
-              <ul class="submenu">
-                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
-                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
-                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="SalleDeReunion.html">Salles de réunion</a></li>
-                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
-              </ul>
-          </li>
-          <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
-          <li><a href="pages/contacts.html">Nous contacter</a></li>
-        </ul>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-      </nav>
-    </header>
-    <main class="container">
-      <div class="square"></div>
-      <div class="slider">
-        <div class="carousel-container">
-            <button id="prevBtn"></button>
-            <button id="nextBtn"></button>
-            <div class="carousel-slide">
-                <img src="../images/amphi/amphi6.jpg" id="lastClone" alt="Amphithéâtre"> <!-- METTRE UNEDEUXIEME FOIS LA DERNIERE IMAGE ICI-->
-                <img src="../images/amphi/amphi1.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi2.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi3.jpg" alt="Amphithéâtre"> <!-- Ne pas oublier de changer SRC enfonction de la position de ce fichier et du dossier de référence -->
-                <img src="../images/amphi/amphi4.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi5.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi6.jpg" alt="Amphithéâtre">
-                <img src="../images/amphi/amphi1.jpg" id="firstClone" alt="Amphithéâtre"> <!-- METTRE UNEDEUXIEME FOIS LA PREMIERE IMAGE ICI-->
-            </div>
-        </div>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Centre de Congrès Champs-Élysées</title>
+  <meta name="description" content="Centre de congrès de la mairie d'Issoudun" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link rel="icon" href="../icons/logoC.png" />
+  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/template.css">
+  <link rel="stylesheet" href="../styles/slider.css">
+  <link rel="stylesheet" href="../styles/nav.css">
+  <link rel="stylesheet" href="../styles/footer.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a class="logo" href="../index.html">Congrès Issoudun</a>
+      <ul class="nav-links">
+        <li class="make-disappear">
+          <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+          <ul class="submenu">
+            <li><a href="amphitheatre.html">Amphithéâtre</a></li>
+            <li><a href="EspaceNumerique.html">Espace numérique</a></li>
+            <li><a href="SalleDeReception.html">Salle de réception</a></li>
+            <li><a href="SalleDeReunion.html">Salles de réunion</a></li>
+            <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
+          </ul>
+        </li>
+        <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
+        <li><a href="pages/contacts.html">Nous contacter</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
       </div>
+    </nav>
+  </header>
+  <main class="container">
+    <div class="whole-card-container">
+
+      <div class="slideshow-container">
+        <div class="mySlides">
+          <img class="slider-img" src="../images/amphi/amphi1.jpg" alt="AmphiImage">
+        </div>
+        <div class="mySlides">
+            <img class="slider-img" src="../images/amphi/amphi2.jpg" alt="AmphiImage">
+          </div>
+        <div class="mySlides">
+            <img class="slider-img" src="../images/amphi/amphi6.jpg" alt="AmphiImage">
+          </div>
+        <div class="mySlides">
+            <img class="slider-img" src="../images/amphi/amphi4.jpg" alt="AmphiImage">
+          </div>
+        <div class="mySlides">
+            <img class="slider-img" src="../images/amphi/amphi5.jpg" alt="AmphiImage">
+          </div>
+
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+      </div>
+
       <div class="presentation" id="amphi">
         <div class="fiche">
           <h2>AMPHITHÉÂTRE PIERRE SELLERON</h2>
           <div class="features">
-              <!-- PERSONNES -->
+            <!-- PERSONNES -->
             <div class="specs">
               <div class="objects">
                 <img src="../icons/Personnes.svg">
@@ -78,43 +96,60 @@
               </div>
               <div class="objects">
                 <p>
-                    11,5 x 6,4 x 0,8 mètres
+                  11,5 x 6,4 x 0,8 mètres
                 </p>
               </div>
             </div>
-          <div class="info">
-            <p>
+            <div class="info">
+              <p>
                 Écran, régie, son et lumière, équipement de projection, mobilier.
-            </p>
-            <p>
+              </p>
+              <p>
                 2 cabines de traduction simultanée, loges.
-            </p>
-            <p>
+              </p>
+              <p>
                 Régisseur technique : prséstation régie sur demande.
-            </p>
-          </div>
-          <div class="button">
-            <a href="/pages/book.html">RÉSERVER</a>
+              </p>
+            </div>
+            <div class="button">
+              <a href="/pages/book.html">RÉSERVER</a>
+            </div>
           </div>
         </div>
-      </div>
-    </main>
-    <footer>
+      </div </div> </main> <footer>
       <div>
         <ul>
-          <li class="titre"><h3>Contacts</h3></li>
-          <li><p>congres@issoudun.fr</p></li>
-          <li><p>Fax: 0254033267</p></li>
-          <li><p>Tel: +33 2 54 03 32 61</p></li>
-          <li><p>Centre de Congrès "Champs Élysées"</p></li>
-          <li><p>Boulevard Roosevelt</p></li>
-          <li><p>BP 150</p></li>
-          <li><p>36105 Issoudun</p></li>
+          <li class="titre">
+            <h3>Contacts</h3>
+          </li>
+          <li>
+            <p>congres@issoudun.fr</p>
+          </li>
+          <li>
+            <p>Fax: 0254033267</p>
+          </li>
+          <li>
+            <p>Tel: +33 2 54 03 32 61</p>
+          </li>
+          <li>
+            <p>Centre de Congrès "Champs Élysées"</p>
+          </li>
+          <li>
+            <p>Boulevard Roosevelt</p>
+          </li>
+          <li>
+            <p>BP 150</p>
+          </li>
+          <li>
+            <p>36105 Issoudun</p>
+          </li>
         </ul>
       </div>
       <div>
         <ul>
-          <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+          <li class="titre">
+            <h3>À découvrir sur Issoudun</h3>
+          </li>
           <li><a href="https://cinemaelysees.com/">Cinéma Les Élysées</a></li>
           <li><a href=" https://www.biptv.tv/">Bip TV</a></li>
           <li><a href="https://www.ccacissoudun.tv/">Centre culturel Albert Camus</a></li>
@@ -124,11 +159,14 @@
       </div>
       <div>
         <ul>
-          <li><h3><a class="titre" href="pages/legalnotice.html">Mentions légales</a></h3></li>
+          <li>
+            <h3><a class="titre" href="pages/legalnotice.html">Mentions légales</a></h3>
+          </li>
         </ul>
       </div>
-    </footer>
-    <script src="../scripts/slider.js"></script>
-    <script src="../scripts/nav.js"></script>
-  </body>
+      </footer>
+      <script src="../scripts/slider.js"></script>
+      <script src="../scripts/nav.js"></script>
+</body>
+
 </html>
