--- a/pages/book.html
+++ b/pages/book.html
@@ -103,12 +103,12 @@
                     <div class="choice">
                       <div class="restoChoice">
 
-                        <label class="choiceContainer ">Oui, une restauration chaude
+                        <label class="choiceContainer ">Oui, une chaude
                           <input class="hot" type="checkbox" name="resto" value="Restauration chaude" checked="checked">
                           <span class="checkmark"></span>
                         </label>
 
-                        <label class="choiceContainer ">Oui, une restauration froide
+                        <label class="choiceContainer ">Oui, une froide
                           <input class="cold" type="checkbox" name="resto" value="Restauration froide">
                           <span class="checkmark"></span>
                         </label>
