--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -30,8 +30,8 @@
             <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
           </ul>
         </li>
-        <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
-        <li><a href="pages/contacts.html">Nous contacter</a></li>
+        <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
+        <li><a href="contacts.html">Nous contacter</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
