--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="icon" href="../icons/logoC.png" />
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/contacts.css">
+    <link rel="stylesheet" href="../styles/book.css">
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="../styles/footer.css">
   </head>
