update gros bordel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html">Congrès Issoudun</a>
+        <a class="logo-link" href="index.html">
+          <img class="logo" src="images/LOGO-CDC-img-monochrome-blanc.png" alt="">
+        </a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
@@ -28,7 +30,7 @@
               </ul>
           </li>
           <li id="book-not-displayed"><a href="pages/book.html">Réserver</a></li>
-          <li><a href="pages/contacts.html">Nous contacter</a></li>
+          <li id="book-not-displayed"><a href="pages/contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -39,7 +41,7 @@
     </header>
     <main class="MainContainer">
       <div class="hero">
-        <img class="CdC" src="images/Hero.svg" alt="Centre de Congrès Champs Élysées" />
+        <img class="CdC" src="images/LOGO-CDC-monochrome-blanc.png" alt="Centre de Congrès Champs Élysées" />
         <button class="btn">
             <div class="scroll-down"></div>
         </button>
