update hero animation + nav

--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
     </header>
     <main class="MainContainer">
       <div class="hero">
-        <img class="CdC" src="images/LOGO-CDC-monochrome-blanc.png" alt="Centre de Congrès Champs Élysées" />
+        <div class="Cdc">
+          <div class="logo-img">
+              <img class="logo-left" src="images/logo-cdc-left.png" alt="Centre de Congrès Champs Élysées" />
+              <img class="logo-right" src="images/logo-cdc-right.png" alt="Centre de Congrès Champs Élysées" />
+          </div>
+          <img class="logo-text" src="images/cdc-logo-text.png" alt="Centre de Congrès Champs Élysées" />
+
+        </div>
+        <p>Votre complexe économique et culturel au coeur d'Issoudun</p>
         <button class="btn">
             <div class="scroll-down"></div>
         </button>
@@ -174,7 +182,7 @@
             <img class="logoCine" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
             <div class="cineText">
               <h2>Un voyage. Des émotions. Vos cinémas !</h2>
-              <p>
+              <p class="lazyload">
                 3 salles de cinéma pour retrouver vos films préférés
               </p>
               <a class="hvr-pop" href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
