--- a/pages/book.html
+++ b/pages/book.html
@@ -17,7 +17,9 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="../index.html">Congrès Issoudun</a>
+        <a class="logo" href="../index.html">
+          <img class="logo" src="../images/LOGO-CDC-img-monochrome-blanc.png" alt="">
+        </a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
