--- a/pages/sent.html
+++ b/pages/sent.html
@@ -15,7 +15,9 @@
   <body class="container">
     <header>
       <nav>
-        <a class="logo" href="../index.html">Congrès Issoudun</a>
+        <a class="logo" href="../index.html">
+          <img class="logo" src="../images/LOGO-CDC-img-monochrome-blanc.png" alt="">
+        </a>
         <ul class="nav-links">
           <li class="make-disappear">
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
