--- a/pages/HallDaccueil.html
+++ b/pages/HallDaccueil.html
@@ -31,7 +31,7 @@
               </ul>
           </li>
           <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
-          <li><a href="contacts.html">Nous contacter</a></li>
+          <li id="book-not-displayed"><a href="contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
@@ -44,19 +44,19 @@
       <div class="whole-card-container">
           <div class="slideshow-container">
               <div class="mySlides">
-                <img class="slider-img" src="../images/hall/hall1.jpg" alt="hallImage">
+                <img class="slider-img" src="../images/hall/hall5.jpg" alt="hallImage1">
               </div>
               <div class="mySlides">
-                  <img class="slider-img" src="../images/hall/hall2.jpg" alt="hallImage">
+                  <img class="slider-img" src="../images/hall/hall1.jpg" alt="hallImage2">
                 </div>
               <div class="mySlides">
-                  <img class="slider-img" src="../images/hall/hall3.jpg" alt="hallImage">
+                  <img class="slider-img" src="../images/hall/hall7.jpg" alt="hallImage3">
                 </div>
               <div class="mySlides">
-                  <img class="slider-img" src="../images/hall/hall4.jpg" alt="hallImage">
+                  <img class="slider-img" src="../images/hall/hall4.jpg" alt="hallImage4">
                 </div>
               <div class="mySlides">
-                  <img class="slider-img" src="../images/hall/hall9.jpg" alt="hallImage">
+                  <img class="slider-img" src="../images/hall/hall9.jpg" alt="hallImage5">
                 </div>
       
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
