--- a/pages/amphitheatre.html
+++ b/pages/amphitheatre.html
@@ -32,8 +32,8 @@
             <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
           </ul>
         </li>
-        <li class="menu-translate"><a href="book.html">Réserver</a></li>
-        <li class="menu-translate"><a href="contacts.html">Nous contacter</a></li>
+        <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
+        <li id="book-not-displayed"><a href="contacts.html">Nous contacter</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
