--- a/pages/sent.html
+++ b/pages/sent.html
@@ -30,7 +30,7 @@
               </ul>
           </li>
           <li id="book-not-displayed"><a href="book.html">Réserver</a></li>
-          <li><a href="contacts.html">Nous contacter</a></li>
+          <li id="book-not-displayed"><a href="contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
